# ChangeLog for perl-core/CPAN-Meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/CPAN-Meta/ChangeLog,v 1.18 2011/12/22 22:21:27 maekke Exp $

  22 Dec 2011; Markus Meier <maekke@gentoo.org> CPAN-Meta-2.112.621.ebuild:
  x86 stable, bug #393397

  20 Dec 2011; Agostino Sarubbo <ago@gentoo.org> CPAN-Meta-2.112.621.ebuild:
  Stable for AMD64, wrt bug #393397

  14 Dec 2011; Markus Meier <maekke@gentoo.org> CPAN-Meta-2.112.621.ebuild:
  arm stable, bug #393397

  07 Dec 2011; Jeroen Roovers <jer@gentoo.org> CPAN-Meta-2.112.621.ebuild:
  Stable for HPPA (bug #393397).

*CPAN-Meta-2.112.621 (24 Sep 2011)

  24 Sep 2011; Torsten Veller <tove@gentoo.org> +CPAN-Meta-2.112.621.ebuild:
  Version bump

*CPAN-Meta-2.112.150 (06 Aug 2011)

  06 Aug 2011; Torsten Veller <tove@gentoo.org> +CPAN-Meta-2.112.150.ebuild:
  Version bump

  26 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  CPAN-Meta-2.110.930.ebuild:
  Marked ~ppc/~ppc64 wrt #357599

  07 Jul 2011; Alexis Ballier <aballier@gentoo.org> CPAN-Meta-2.110.930.ebuild:
  keyword ~x86-fbsd

  13 Jun 2011; Matt Turner <mattst88@gentoo.org> CPAN-Meta-2.110.930.ebuild:
  Added ~mips, bug 357599

  02 May 2011; Fabian Groffen <grobian@gentoo.org> CPAN-Meta-2.110.930.ebuild:
  Marked ~x64-freebsd

*CPAN-Meta-2.110.930 (03 Apr 2011)

  03 Apr 2011; Torsten Veller <tove@gentoo.org> +CPAN-Meta-2.110.930.ebuild:
  Version bump

*CPAN-Meta-2.110.910 (02 Apr 2011)

  02 Apr 2011; Torsten Veller <tove@gentoo.org> +CPAN-Meta-2.110.910.ebuild:
  Version bump

  19 Mar 2011; Raúl Porcel <armin76@gentoo.org> CPAN-Meta-2.110.440.ebuild,
  CPAN-Meta-2.110.580.ebuild:
  Add ~alpha/~arm/~ia64/~s390/~sh/~sparc wrt #357599

  08 Mar 2011; Jeroen Roovers <jer@gentoo.org> CPAN-Meta-2.110.440.ebuild,
  CPAN-Meta-2.110.580.ebuild:
  Marked ~hppa (bug #357599).

*CPAN-Meta-2.110.580 (08 Mar 2011)

  08 Mar 2011; Torsten Veller <tove@gentoo.org> +CPAN-Meta-2.110.580.ebuild: